@@ -15,6 +15,7 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.Map;
 import java.util.Set;
@@ -59,12 +60,8 @@ public final class URIUtils {
                 value = "";
             } else {
 
-                try {
-                    key = URLDecoder.decode(pair.substring(0, pos), "UTF-8");
-                    value = URLDecoder.decode(pair.substring(pos + 1), "UTF-8");
-                } catch (UnsupportedEncodingException e) {
-                    throw ExceptionUtils.getRuntimeException(e);
-                }
+                key = URLDecoder.decode(pair.substring(0, pos), StandardCharsets.UTF_8);
+                value = URLDecoder.decode(pair.substring(pos + 1), StandardCharsets.UTF_8);
             }
 
             result.put(key, value);
